# solomon-harness

./: .coverage  .gitattributes  .gitignore  .mcp.json  AGENTS.md  AGY.md  CHANGELOG.md  CLAUDE.md  GEMINI.md  MANIFEST.in  PLAN.md  README.md  docker-compose.yml  pyproject.toml  setup.py  skill-sources.json
.agent/: config.json
.agents/: AGENTS.md  hooks.json  skills.json
.agents/agents/: documenter.md  flutter.md  frontend.md  ml_engineer.md  observability.md  product_owner.md  qa.md  quant_trader.md  scrum_master.md  security.md  seo.md  software_architect.md  software_engineer.md  sre.md
.claude/: CLAUDE.md  settings.json
.claude/agents/: agent_builder.md  android.md  apple.md  auth_engineer.md  data_analyst.md  data_science.md  dba.md  documenter.md  educational_psychologist.md  flutter.md  frontend.md  legacy_modernizer.md  long_run_strategist.md  loop_engineer.md  ml_engineer.md  observability.md  peer_reviewer.md  practice_curator.md  product_owner.md  qa.md  quant_trader.md  research_analyst.md  scalper.md  scrum_master.md  security.md  seo.md  software_architect.md  software_engineer.md  sre.md  swing_trader.md  ux_designer.md
.claude/commands/: solomon-bug.md  solomon-dev-bug.md  solomon-dev-idea.md  solomon-dev-issue.md  solomon-dev-refine.md  solomon-dev-release.md  solomon-dev-review.md  solomon-dev-start.md  solomon-idea.md  solomon-issue.md  solomon-loop-auto.md  solomon-loop.md  solomon-reconcile.md  solomon-refine.md  solomon-release.md  solomon-review.md  solomon-scan-arch.md  solomon-scan-dedup.md  solomon-start.md  solomon-workflow.md
.codex/: config.toml
.codex/agents/: agent_builder.toml  android.toml  apple.toml  auth_engineer.toml  data_analyst.toml  dba.toml  documenter.toml  educational_psychologist.toml  flutter.toml  frontend.toml  legacy_modernizer.toml  long_run_strategist.toml  loop_engineer.toml  ml_engineer.toml  observability.toml  peer_reviewer.toml  practice_curator.toml  product_owner.toml  qa.toml  quant_trader.toml  research_analyst.toml  scalper.toml  scrum_master.toml  security.toml  seo.toml  software_architect.toml  software_engineer.toml  sre.toml  swing_trader.toml
.gemini/: settings.json
.gemini/commands/: solomon-bug.toml  solomon-dev-bug.toml  solomon-dev-idea.toml  solomon-dev-issue.toml  solomon-dev-refine.toml  solomon-dev-release.toml  solomon-dev-review.toml  solomon-dev-start.toml  solomon-idea.toml  solomon-issue.toml  solomon-loop-auto.toml  solomon-loop.toml  solomon-reconcile.toml  solomon-refine.toml  solomon-release.toml  solomon-review.toml  solomon-scan-arch.toml  solomon-scan-dedup.toml  solomon-start.toml  solomon-workflow.toml
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md
.github/ISSUE_TEMPLATE/: 01_feature_conception.md  02_bug_report.md  03_quant_model_hypothesis.md  bug_report.md  feature_conception.md  future_ideas.md
.github/workflows/: adr-gate.yml  ci.yml  release.yml
agents/: AGENTS.md  flutter.md  observability.md  security.md  sre.md
agents/agent_builder/: persona.md
agents/android/: persona.md
agents/apple/: persona.md
agents/auth_engineer/: persona.md
agents/data_analyst/: persona.md
agents/data_science/: persona.md
agents/dba/: persona.md
agents/documenter/: main.py  persona.md
agents/educational_psychologist/: persona.md
agents/flutter/: main.py  persona.md
agents/frontend/: persona.md
agents/legacy_modernizer/: persona.md
agents/long_run_strategist/: persona.md
agents/loop_engineer/: persona.md
agents/ml_engineer/: persona.md
agents/observability/: persona.md
agents/peer_reviewer/: persona.md
agents/practice_curator/: persona.md
docs/: behavioral-evals.md  loop-engineering.md  release-policy.md  solomon-dev-workflow.md  solomon-workflow.md
scratch/: save_review_memory.py
scripts/: bootstrap-agent.sh  check-adr-gate.py  check-adr-unique.py  check-security-diff.py  check-skill-depth.py  compile-harnesses.py  document-skills.py  fetch-skills.py  generate-integrations.py  scrum-master.sh  setup-git-hooks.sh  spawn-agent.sh  spec-lint.py  test-git-hooks.sh  test-spawn-agent.sh  validate-agents.py  validate-templates.py  validate-workflows.py  wiki-sync.sh
solomon_dev/: README.md  package.json
solomon_harness/: __init__.py  __main__.py  adapter_ownership.py  agent_builder.py  agent_selection.py  behavioral_evals.py  bootstrap.py  broker_cli.py  capability_router.py  claim.py  cli.py  cockpit_read.py  compiler.py  curator.py  dates.py  digest.py  engine_adapters.py  evals.py  frontmatter.py  github.py  healthcheck.py  home.py  host.py  host_adapter_agy.py  host_adapter_claude.py  host_adapter_codex.py  host_adapter_common.py  host_adapter_contract.py  host_adapters.py  host_hooks.py  install_global.py  install_layout.py  install_lock.py  install_transaction.py  integrations.py  layout.py  loop_budget.py  loop_lock.py  loop_log.py  loop_policy.py  (+19 more)
templates/: AGENTS.md.template  CLAUDE.md.template
tests/: conftest.py  test_adr_gate.py  test_adr_migration.py  test_agent_selection.py  test_behavioral_evals.py  test_behavioral_evals_contracts.py  test_behavioral_evals_hardening.py  test_behavioral_evals_mutation_contracts.py  test_behavioral_evals_seed_integrity.py  test_bootstrap.py  test_broker_cli.py  test_capability_router.py  test_check_adr_unique.py  test_check_security_diff.py  test_check_skill_depth.py  test_ci_dev_group.py  test_ci_surrealdb_service.py  test_ci_test_infrastructure.py  test_claim.py  test_cli_layout.py  test_cockpit_read.py  test_code_index.py  test_command_gates.py  test_compile_harnesses.py  test_compile_project_adapters.py  test_compozy_adoption_batch.py  test_curator.py  test_database_client.py  test_database_client_multimodel.py  test_database_client_resilience.py  test_database_client_structure.py  test_degraded_memory.py  test_digest.py  test_document_skills.py  test_durability_funnel.py  test_educational_psychologist.py  test_embedding_gate.py  test_ensure_project_gitignore.py  test_fetch_skills.py  test_frontmatter.py  (+67 more)
ui/: package-lock.json  package.json  vitest.config.ts  vitest.setup.ts
(+704 files in other folders)
