[project]
name = "solomon-harness"
version = "0.7.0"
description = "Multi-agent software-development harness with a SurrealDB/SQLite memory layer."
requires-python = ">=3.10"
dependencies = [
    # Primary memory backend. SDK 2.x speaks the SurrealDB v2.0.0-v3.1.4 protocol;
    # the client uses its synchronous surface (Surreal(url) + signin with
    # username/password). The client falls back to SQLite on any connection error.
    "surrealdb>=2.0.0,<3.0.0",
    # MCP server that exposes the project memory to the host tools.
    "mcp>=1.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
]
[project.scripts]
solomon-harness = "solomon_harness.cli:main"



[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=7.0",
]

[tool.uv]
# This repository is an application and a template tree, not an installable package.
package = false

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# tests/ has no __init__.py (pytest uses rootdir import mode), so mypy must be
# told to treat package bases explicitly; otherwise a test file imported both as
# `tests.foo` and bare `foo` is reported as found twice under two module names.
explicit_package_bases = true
namespace_packages = true

[tool.setuptools]
packages = ["solomon_harness"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

