[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "solomon-harness"
version = "0.11.0"
description = "Multi-agent software-development harness with a SurrealDB/SQLite memory layer."
requires-python = ">=3.10"
dependencies = [
    # Primary memory backend. SDK 2.x speaks the SurrealDB v2.0.0-v3.1.4 protocol;
    # the client uses its synchronous surface (Surreal(url) + signin with
    # username/password). The client falls back to SQLite on any connection error.
    "surrealdb>=2.0.0,<3.0.0",
    # MCP server that exposes the project memory to the host tools.
    "mcp>=1.0",
    "opentelemetry-api>=1.43.0",
    "opentelemetry-sdk>=1.43.0",
]
[project.scripts]
solomon-harness = "solomon_harness.cli:main"
solomon-harness-mcp = "solomon_harness.mcp_server:main"

[dependency-groups]
dev = [
    "ruff>=0.5",
    "mypy>=1.10",
    "pytest>=9.1",
    "pytest-cov>=5.0",
    # Used by scripts/validate-workflows.py to structurally parse the GitHub
    # Actions YAML (a real parser replaced a hand-rolled bracket scanner that
    # false-positived on shell regexes). Dev/CI-only; not a runtime dependency.
    "pyyaml>=6.0",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
# tests/ has no __init__.py (pytest uses rootdir import mode), so mypy must be
# told to treat package bases explicitly; otherwise a test file imported both as
# `tests.foo` and bare `foo` is reported as found twice under two module names.
explicit_package_bases = true
namespace_packages = true

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["solomon_harness*"]

[tool.setuptools.package-data]
solomon_harness = [
    "legacy_payloads/v0.11.0.tsv",
    "legacy_payloads/v0.11.0-main.tsv",
    "catalog/workflows/solomon-bug.md",
    "catalog/workflows/solomon-idea.md",
    "catalog/workflows/solomon-issue.md",
    "catalog/workflows/solomon-loop.md",
    "catalog/workflows/solomon-refine.md",
    "catalog/workflows/solomon-release.md",
    "catalog/workflows/solomon-review.md",
    "catalog/workflows/solomon-scan-arch.md",
    "catalog/workflows/solomon-scan-dedup.md",
    "catalog/workflows/solomon-start.md",
    "catalog/workflows/solomon-workflow.md",
    "templates/AGENTS.md.template",
    "templates/CLAUDE.md.template",
    "templates/KANBAN.md.template",
    "templates/harness/.agent/config.json",
    "templates/harness/main.py",
    "templates/wiki/Business-Requirements.md.template",
    "templates/wiki/Commands-Reference.md.template",
    "templates/wiki/Design-System.md.template",
    "templates/wiki/Features.md.template",
    "templates/wiki/Home.md.template",
    "templates/wiki/Quick-Start.md.template",
    "templates/wiki/Release-Notes.md.template",
    "templates/wiki/Release.md.template",
    "templates/wiki/Technical-Documentation.md.template",
    "templates/wiki/_Sidebar.md.template",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
faulthandler_timeout = 120
faulthandler_exit_on_timeout = true
markers = [
    "unit: fast tests isolated from external services and physical durability syscalls",
    "integration: tests that exercise boundaries between repository components",
    "e2e: tests that exercise a complete user-visible workflow",
    "real_fsync: tests explicitly permitted to invoke the physical os.fsync syscall",
]
